z-index on label on events fix

--- a/_sass/bootstrap/_alert.scss
+++ b/_sass/bootstrap/_alert.scss
@@ -58,7 +58,7 @@
 
 .overlay-label {
   position: absolute;
-  z-index:1000;
+  z-index:10;
   background-color: $ccc-blue;
   color: white;
   bottom: 10px;
